--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Changing title of Sample Web</h1>
+<h1>Greate  Sample Web site</h1>
 <p><Branching is important worklflow in git/p>
-<p> Happy path, fast forward</p>
+<p> Happy path, fast forward, no fast forward and rebase</p>
